--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "postcss-mixins": "^11.0.3",
     "postcss-viewport-unit-fallback": "^1.0.1",
     "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.0.0",
