--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "@eslint/js": "^9.21.0",
     "@next/eslint-plugin-next": "^15.1.7",
     "@shikijs/rehype": "^3.0.0",
+    "@tailwindcss/postcss": "^4.0.8",
     "@tailwindcss/typography": "^0.5.16",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__eslintrc": "^2.1.2",
     "@types/node": "^22.13.5",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "autoprefixer": "^10.4.20",
     "change-case": "^5.4.4",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.1",
@@ -66,7 +66,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.0.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1"
   }
