Add `tailwindStylesheet` in Prettier config
This is required in Tailwind v4.

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "arrowParens": "avoid",
 
   "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "./src/styles/index.css",
   "tailwindFunctions": ["clsx", "cn", "cva"]
 }
