--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "eslint.workingDirectories": [{ "mode": "auto" }],
+  "files.associations": { "*.css": "tailwindcss" },
   "typescript.tsdk": "node_modules/typescript/lib"
 }
